# pull-request-statistics

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yaml
src/: main.py  require_env.py
src/github_client/: __init__.py  client.py  errors.py
src/github_client/errors/: __init__.py  github_client_error.py  malformed_response_error.py
src/github_client/pull_request_statistics/: __init__.py  errors.py  pull_request_statistics_service.py
src/github_client/pull_request_statistics/date_ranges/: __init__.py  date_range_factory.py
src/github_client/pull_request_statistics/date_ranges/enums/: __init__.py  half.py  month.py  quarter.py
src/github_client/pull_request_statistics/models/: __init__.py  member_statistics.py  pull_request_summary.py
src/github_client/team_members/: __init__.py  team_member.py  team_members_service.py
src/pull_request_statistics/: __init__.py  errors.py  pull_request_service.py  pull_request_summary.py
src/pull_request_statistics/date_ranges/: __init__.py  date_range.py  date_range_factory.py
src/pull_request_statistics/date_ranges/enums/: half.py  month.py  quarter.py
tests/integration/: test_pull_request_service_integration.py
tests/integration/pull_request_statistics/: test_pull_request_service_integration.py
tests/unit/: test_require_env.py
tests/unit/github_client/: test_client.py
tests/unit/github_client/pull_request_statistics/: conftest.py  test_pull_request_service.py  test_pull_request_summary.py
tests/unit/github_client/pull_request_statistics/date_ranges/: test_date_range_factory.py
tests/unit/github_client/pull_request_statistics/models/: test_pull_request_summary.py
tests/unit/github_client/team_members/: test_team_members.py
tests/unit/pull_request_statistics/: conftest.py  test_pull_request_service.py  test_pull_request_summary.py
tests/unit/pull_request_statistics/date_ranges/: test_date_range_factory.py
tests/unit/pull_request_statistics/date_ranges/enums/: test_half.py  (+2 more)
(+3 files in other folders)
